[gd_scene load_steps=3 format=3 uid="uid://bae1fe7hytcfm"]

[ext_resource type="Script" uid="uid://xgadv4ok5bf5" path="res://scenes/UI/ui.gd" id="1_llgrp"]
[ext_resource type="Texture2D" uid="uid://c6tjsp6bdjqhu" path="res://assets/icons/Gear-icon.png" id="2_yb1mt"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llgrp")

[node name="CanvasGroup" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasGroup"]
offset_right = 142.0
offset_bottom = 47.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasGroup/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="GridContainer" type="GridContainer" parent="CanvasGroup/PanelContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="PlayerLabel" type="Label" parent="CanvasGroup/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Player 1"

[node name="LapLabel" type="Label" parent="CanvasGroup/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Lap: 1/3"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasGroup"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasGroup/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TimerLabel" type="Label" parent="CanvasGroup/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasGroup"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("2_yb1mt")
flat = true
expand_icon = true

[connection signal="pressed" from="CanvasGroup/Button" to="." method="_on_button_pressed"]
